Added a line about how much I am enjoying the class

--- a/yahding.html
+++ b/yahding.html
@@ -2,5 +2,8 @@
 <head><title> Git Test Page </title></head>
 <body>
 Hello world! This is Yahong Ding
+This is my first time to build up a website through github. It's a very interesting class and software since I have not done this before. 
+Through this homework, I can learn the basic ideas of this web builder. 
+This class is very nice since the professor, Mike, gave us the assignment with very specific steps. No confusing at all.  
 </body>
 </html>
